--- a/InvertedPendulum/Cascading_Exp4.org
+++ b/InvertedPendulum/Cascading_Exp4.org
@@ -35,7 +35,7 @@ print
 Cascading_Exp4.py: Cascading_Exp4.org
 	$(call tangle,"Cascading_Exp4.org")
 
-LM_VALUES="30 1" "30 10" "30 100"
+LM_VALUES="10 1" "20 1" "30 1" "30 10"
 Cascading_Exp4: Cascading_Exp4.py InvertedPendulum.py ../Cascading.py ../LAFEM.py DE.exe ../a2str.py Random_Samples.mat Evaluate_omega.exe Evaluate_theta.exe
 	for i in $(LM_VALUES); \
 	do \
