Cascading_Exp3: Code et résultats pour la version 6

--- a/Cascading.org
+++ b/Cascading.org
@@ -107,9 +107,9 @@ def shape_for_SA_regression( D, q, phi, Actions ):
         si = sasa[0]
         ai = sasa[1]
         ssi = sasa[2]
-        astar = max( [ [ssi,x] for x in Actions ], key=lambda sa : q( sa[0], sa[1] ) )[1] 
-        if q_min > (q(ssi,astar ))[0] :
-            q_min = (q(ssi, astar ))[0]
+        for a in Actions:
+            if q_min > (q(ssi,a ))[0] :
+                q_min = (q(ssi, a ))[0]
     for sasa in SASA:
         si = sasa[0]
         ai = sasa[1]
@@ -119,7 +119,7 @@ def shape_for_SA_regression( D, q, phi, Actions ):
             if a == ai:
                 answer.append( [ phi( si, ai ).transpose()[0], (q(si,ai) - 0.9*q( ssi, astar ))[0]] )
             else:
-                #version (5)
+                #version (6)
                 answer.append( [ phi( si, a ).transpose()[0], 0.9*q_min ] )
     return answer
 
