--- a/README.org
+++ b/README.org
@@ -9,14 +9,17 @@ Avec Cascading_Exp1 et ANIRL_Exp6 on s'aperçoit que :
 - SCIRL fonctionne très bien. C'est la meilleure approche en features naturelles, arrive à parité en naturel avec le cascading informé
 - ANIRL parfait ne donne pas un résultat parfait :-p
 
-On va aussi tester le cascading SxA, histoire de. On teste deux des méthodes qui marchent sur le Gridworl, 4 et 6
+Cascading_Exp5 montre que le Cascading SxA fonctionne mieux que sur S.
+Il manque juste un point de comparaison.
+
+Immédiatement, l'on va faire tourner ANIRL en mode parfait (même si ça prend des heures) pour avoir quelque chose à afficher.
+Dans un futur plus lointain, l'on va implémenter par exemlpe boularias pour avoir un point de comparaison.
 * Sur le GridWorld
 La baseline, ANIRL_Exp3, fonctionne vraiment pas trop mal.
 Cascading_Exp2 devrait permettre de voir que le cascading ne fonctionne pas avec une régression sur S seule. Par contre la classif seule semble marcher.
 Cela correspond au cas foireux que Matthieu a identifé.
-
 Après le test de diverses heuristiques sur le GridWorld, il s'avère que que seules certaines marchent bien.
-En pratique on garde les heuristiques 4 et 6, à savoir rmin - epsilon et q(s_i,a) - min_{s,a\in S\times A} q(s,a).
-On va les tester sur le Highway voir ce que ça donne
+En fait il n'y en a qu'une qui fonctionne (la 4 : r_min-epsilon) et est justifiable et facilement implémentable.
+
 * Sur le pendule
 Sur le pendule, le cascading ne fonctionne pas car les features ne permettent pas au classifieur de classifier
