Début du changement des figures

--- a/Highway/ANIRL_Exp5.org
+++ b/Highway/ANIRL_Exp5.org
@@ -160,45 +160,10 @@ ANIRL_Exp5: ANIRL_Exp5.exe  Mu_E.mat ANIRL_Exp5_mu_E_s0.mat theta2omega.py omega
 
 #+end_src
 
-* Plotting
-#+begin_src python :tangle ANIRL_Exp5_plot.py
-from matplotlib import rc
-rc('text', usetex=True)
-import sys
-sys.path+=['..']
-from numpy import *
-import scipy
-import pylab as pylab
-from Plot import *
+* Results 
+ : python -c "from numpy import *;import sys;sys.path+=['..'];from Plot import *;D=genfromtxt('ANIRL_Exp5.mat');print [mean(D),min(D),max(D),naive_variance(D)]"
 
-#Changer le plot pour l'afficher comme l'expert et le random
-
-D = genfromtxt( "ANIRL_Exp5.mat" )
-
-myPlot = Plot()
-myPlot.Expert = 7.74390968 #python Expert.py to get this value
-myPlot.Random_mean = -1.5821833963484#See Highway.org about Random.py for information on these values
-myPlot.Random_min = -4.0007295890199996#python Random.py to get this value
-myPlot.Random_max = 2.7064859345599999#python Random.py to get this value
-myPlot.Random_var = 1.4465398450419833#python Random.py to get this value
-
-myPlot.ymin = -5
-myPlot.ymax = 10
-
-myPlot.plot( D, 'blue', 'ANIRL_Exp5_fig1.pdf' )
-
-
-#+end_src
-
-#+srcname: ANIRL_Exp5_make
-#+begin_src makefile
-ANIRL_Exp5_plot.py: ANIRL_Exp5.org
-	$(call tangle,"ANIRL_Exp5.org")
-
-ANIRL_Exp5_fig1.pdf: ANIRL_Exp5_plot.py ANIRL_Exp5.mat ../Plot.py
-	python ANIRL_Exp5_plot.py
-
-#+end_src
+[7.2183449001, 7.2125435575500001, 7.2235682889100001, 1.0470405042575963e-05]
 
   #+srcname: ANIRL_Exp5_clean_make
   #+begin_src makefile
