--- a/piot2012cascading/main_KLEIN_v3.tex
+++ b/piot2012cascading/main_KLEIN_v3.tex
@@ -478,7 +478,7 @@ Finally by regrouping the results in \eqref{equation: cas3-1} and \eqref{equatio
 \section{Experiments}
 \label{section: experiments}
 \subsection{Instantiation of the algorithm}
-As hinted to FIXME(Plus insister sur cet aspect) in Section \ref{section: Cascading}, our algorithm can be instanciated in many ways, as any off-the-shelf classifier using a score function can be used in the first step, and any regression method can be used in the second step. This freedom of choice leaves room for problem dependant tweaks if needed.\\
+As hinted to in Section \ref{section: Cascading}, our algorithm can be instanciated in many ways, as any off-the-shelf classifier using a score function can be used in the first step, and any regression method can be used in the second step. This freedom of choice leaves room for problem dependant tweaks if needed.\\
 
 In our tests, we used a subgradient-descent based classifier and a simple regularized least square regression method. The classifier tries to minimize the risk function $R_N(q)$ :
 \begin{equation}
@@ -509,16 +509,17 @@ with $r_i$ as in equation \ref{r.def}. We then get :
 \end{equation}
 so that $\hat R_C(s) = \theta^T \psi(s)$.\\
 \subsection{Experimental setting}
-For each problem we test our approach with, we compare it to two baselines : the mean performance of an agent trained on a random reward and the mean performance of the policy output by the algorithm of \cite{abbeel2004apprenticeship}. This algorithm can be instanciated to work in the same dire conditions as our algorithm, that is to say using only samples from the expert. To do this, we estimate the feature expectations and solve the MDP in a batch, off policy manner thanks respectively to to LSTD$\mu$ (\cite{klein2011batch}) and LSPI (\cite{lagoudakis2003least}).
-\subsection{Inverted pendulum}
-In \cite{klein2011batch}, it is noted that the particular instanciation of Abbeel and Ng's algorithm we use as a baseline is unable to solve the Inverted Pendulum problem (described in \cite{lagoudakis2003least}). 
+For both problems we test our approach with, we compare it to two baselines : the mean performance of an agent trained on a random reward and the mean performance of the policy output by the algorithm of \cite{abbeel2004apprenticeship}. This algorithm can be instanciated to work in the same dire conditions as our algorithm, that is to say using only samples from the expert. To do this, we estimate the feature expectations and solve the MDP in a batch, off policy manner thanks respectively to to LSTD$\mu$ (\cite{klein2011batch}) and LSPI (\cite{lagoudakis2003least}). When this does not work, we fall back to a setting where everything is knows, that is to say the feature expectations are computed by a dynamic programming algorithm that make use of the transition probabilities.\\
+The performance and the expert and the agents is computed with respect to the reward the expert was trained with. We use as a performance metric the mean value over the state space.
+\subsection{Gridworld}
+We first tested our approach on a simple $5\times 5$ gridworld. The expert and the agent can choose between 4 actions (down, left right, or up) that sends the player in the corresponding neighbooring cell. Trying to go off the grid will result in the player staying in its position. Each action has a probability $0.3$ of failing, in which case another randomly chosen different action is executed. The expert begins in the lower left corner and is trained to go to the higher right corner by an exact dynamic programming algorithm. The original reward is null everywhere but in the higher right corner where it is $1$.\\
 
-
-There exist settings this particular instantiation of \cite{abbeel2004apprenticeship}'s algorithm is not able to solve. In \cite{klein2011batch} the authors note that this instanciation the problem. We then fall back to an instantiation using suroutines that breaks the batch, expert-only setting in order to have something to compare to. Precise workarounds will be described as they are used. It is important to note that sometimes our algorithm is at the best of our knowledge FIXME(c'est pas vrai il y a SCIRL aussi ;) the only one able to solve the problem with such a constrained input.
 \subsection{Highway driving simulator}
 Inspired from a problem seen in \cite{syed2008apprenticeship,syed2008game}, we coded a driving simulator. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The first thing to note about this setting is that the direct problem (RL) problem is not trivial, as LSPI is unable to solve it using the natural features we first gave it. These feature stemmed from a discretization of the state-action space, the dimension of the features being the cardinality of this space. With each state-action pair $s,a$ we associate an index $i$ so that the $i$-th coordinate of the feature is $1$ and every other is $0$. We tried to train an agent on the reward used by the expert (which was trained using an exact dynamic programming approach), but on top of being extremely slow to run (the LSTD$Q$ subroutine implies a matrix inversion) it does not converge.\\
 As LSPI is used in \cite{abbeel2004apprenticeship}'s algorithm to solve the MDP, it is impossible to use the latter with the natural features. We thus have to spend quite some time engeineering new informative features to make LSPI work. These new features have a dimensionality of $5$, including a constant term and coordinates whose semantics is \emph{The agent should turn right}, \emph{The agent should turn left}, \emph{The agent should increase its speed} and \emph{The agent should do nothing}. With these features in hand, we were able to solve the IRL problem with \cite{abbeel2004apprenticeship}'s algorithm. The results of our experiment is given on two figures, Figure \ref{Cascading_Exp1_1.fig} and \ref{Cascading_Exp1_2.fig}. The data presented here is the mean, minimum and maximum value obtained over 50 runs. The random baseline presented here is the mean, min adn max performance of an agent over 50 different random rewards.\\
 Figure \ref{Cascading_Exp1_1.fig} shows results when employing the Cascading algorithm with the natural set of features and Figure \ref{Cascading_Exp1_2.fig} shows results when using the engineered features, comparing it the the results of \cite{abbeel2004apprenticeship}'s algorithm which could be applied in this case. Although the mean value with natural features is lower than with the engineered ones, we see that there is less risk of catastrophic failure (the min value is higher) and, more importantly, we were actually able to solve the problem in a satisfying manner with.
+\subsection{Pendule}
+A n'ajouter que si les résultats présentent un intérêt particulier par rapport aux deux autres problèmes.
 
  \begin{figure}
  \begin{tabular}{ccc}
@@ -536,15 +537,6 @@ Figure \ref{Cascading_Exp1_1.fig} shows results when employing the Cascading alg
 \item Insister sur le fait qu'on est meilleur quand il y a peu de samples
 \item Insisiter sur le fait qu'en features naturelles, LSPI ne fonctionne pas
 \end{itemize}
-\subsection{Gridworld}
-\begin{itemize}
-\item description du problème
-\item Introduction du task transfert (l'expert est une sorte de tour, l'agent un roi)
-\item Résultats pour l'IRL (comparaison avec ANIRL)
-\item résultats pour le task transfer, impossible de comparer avec ANIRL car officiellement pas de récompense
-\end{itemize}
-\subsection{Pendule}
-A n'ajouter que si les résultats présentent un intérêt particulier par rapport aux deux autres problèmes.
 \section{Related Work}
 \label{section: related work}
 
