--- a/piot2012cascading/main_KLEIN_v3.tex
+++ b/piot2012cascading/main_KLEIN_v3.tex
@@ -541,26 +541,30 @@ with $r_i$ as in equation \ref{r.def}. We then get :
 \end{equation}
 so that $\hat R_C(s) = \theta^T \psi(s)$.\\
 \subsection{Experimental setting}
-For both problems we test our approach with, we compare it to two baselines : the mean performance of an agent trained on a random reward and the mean performance of the policy output by the algorithm of \cite{abbeel2004apprenticeship}. This algorithm can be instanciated to work in the same dire conditions as our algorithm, that is to say using only samples from the expert. To do this, we estimate the feature expectations and solve the MDP in a batch, off policy manner thanks respectively to to LSTD$\mu$ (\cite{klein2011batch}) and LSPI (\cite{lagoudakis2003least}). When this does not work, we fall back to a setting where everything is knows, that is to say the feature expectations are computed by a dynamic programming algorithm that make use of the transition probabilities.\\
-The performance and the expert and the agents is computed with respect to the reward the expert was trained with. We use as a performance metric the mean value over the state space.
+For both problems we test our approach with, we compare it to two baselines : the mean performance of an agent trained on a random reward and the mean performance of the policy output by the algorithm of \cite{abbeel2004apprenticeship}. This algorithm can be instanciated to work in the same dire conditions as our algorithm, that is to say using only samples from the expert. To do this, we estimate the feature expectations and solve the MDP in a batch, off policy manner thanks respectively to to LSTD$\mu$ (\cite{klein2011batch}) and LSPI (\cite{lagoudakis2003least}). When this does not work, we fall back to a setting where everything is known, that is to say the feature expectations are computed by a dynamic programming algorithm that make use of the transition probabilities.\\
+The performance of the expert and the agents is computed with respect to the reward the expert was trained with. We use as a performance metric the mean value over the state space.
 \subsection{Gridworld}
 We first tested our approach on a simple $5\times 5$ gridworld. The expert and the agent can choose between 4 actions (down, left right, or up) that sends the player in the corresponding neighbooring cell. Trying to go off the grid will result in the player staying in its position. Each action has a probability $0.3$ of failing, in which case another randomly chosen different action is executed. The expert begins in the lower left corner and is trained to go to the higher right corner by an exact dynamic programming algorithm. The original reward is null everywhere but in the higher right corner where it is $1$.\\
+The results are shown in two figures. Figure \ref{Fig1.fig} show the baselines we compare ourselves with. Pure classification and the algorithm of \cite{abbeel2004apprenticeship} are on par with one another, both far better than training an agent on a random reward ; they both converge to a value close to the expert's given enough samples. Figure \ref{Fig2.fig} shows results of our algorithm together with the mean performance of both forementionned approaches (variance and min/max were dropped for legibility's sake). It shows the soundness of our cascading approach : when only a few samples are available, we provide a reward that lead to a better policy. When samples are widely available all approaches converge to the same value.
+  \begin{figure}
+  \begin{tabular}{ccc}
+  \subfigure[State of the art approaches on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig1"}\label{Fig1.fig}}&\hspace{.05\linewidth}&
+  \subfigure[Our new approach on the GridWorld]{\includegraphics[width=.45\linewidth]{"Fig2"}\label{Fig2.fig}}\\
+%%  \subfigure[Cascading with natural features]{\includegraphics[width=.4\linewidth]{"Cascading_Exp1_fig1"}\label{Cascading_Exp1_1.fig}}&\hspace{.05\linewidth}&\includegraphics[width=0.45\linewidth]{"Cascading_Exp1_legend"}
+  \end{tabular}
+ \caption{Results on the GridWorld problem. Data is shown with mean, standard deviation, minimum and maximum value over 50 runs.}
+  \end{figure}
+
+
 
 \subsection{Highway driving simulator}
+There are problems for which pure classification just does not cut it, as the number of samples that would be needed 
 Inspired from a problem seen in \cite{syed2008apprenticeship,syed2008game}, we coded a driving simulator. The agent controls a car that can switch between the three lanes of the road, go off-road on either side and modulate between three speed levels. The first thing to note about this setting is that the direct problem (RL) problem is not trivial, as LSPI is unable to solve it using the natural features we first gave it. These feature stemmed from a discretization of the state-action space, the dimension of the features being the cardinality of this space. With each state-action pair $s,a$ we associate an index $i$ so that the $i$-th coordinate of the feature is $1$ and every other is $0$. We tried to train an agent on the reward used by the expert (which was trained using an exact dynamic programming approach), but on top of being extremely slow to run (the LSTD$Q$ subroutine implies a matrix inversion) it does not converge.\\
 As LSPI is used in \cite{abbeel2004apprenticeship}'s algorithm to solve the MDP, it is impossible to use the latter with the natural features. We thus have to spend quite some time engeineering new informative features to make LSPI work. These new features have a dimensionality of $5$, including a constant term and coordinates whose semantics is \emph{The agent should turn right}, \emph{The agent should turn left}, \emph{The agent should increase its speed} and \emph{The agent should do nothing}. With these features in hand, we were able to solve the IRL problem with \cite{abbeel2004apprenticeship}'s algorithm. The results of our experiment is given on two figures, Figure \ref{Cascading_Exp1_1.fig} and \ref{Cascading_Exp1_2.fig}. The data presented here is the mean, minimum and maximum value obtained over 50 runs. The random baseline presented here is the mean, min adn max performance of an agent over 50 different random rewards.\\
 Figure \ref{Cascading_Exp1_1.fig} shows results when employing the Cascading algorithm with the natural set of features and Figure \ref{Cascading_Exp1_2.fig} shows results when using the engineered features, comparing it the the results of \cite{abbeel2004apprenticeship}'s algorithm which could be applied in this case. Although the mean value with natural features is lower than with the engineered ones, we see that there is less risk of catastrophic failure (the min value is higher) and, more importantly, we were actually able to solve the problem in a satisfying manner with.
 \subsection{Pendule}
 A n'ajouter que si les résultats présentent un intérêt particulier par rapport aux deux autres problèmes.
 
-%%  \begin{figure}
-%%  \begin{tabular}{ccc}
-%%  \subfigure[Abbeel and Ng IRL  with engineered features]{\includegraphics[width=.45\linewidth]{"Cascading_Exp1_fig3"}\label{Cascading_Exp1_3.fig}}&\hspace{.05\linewidth}&
-%%  \subfigure[Cascading with engineered features]{\includegraphics[width=.45\linewidth]{"Cascading_Exp1_fig2"}\label{Cascading_Exp1_2.fig}}\\
-%%  \subfigure[Cascading with natural features]{\includegraphics[width=.4\linewidth]{"Cascading_Exp1_fig1"}\label{Cascading_Exp1_1.fig}}&\hspace{.05\linewidth}&\includegraphics[width=0.45\linewidth]{"Cascading_Exp1_legend"}
-%%  \end{tabular}
-%% \caption{Results on the Highway Driving problem. Data is shown with mean, standard deviation, minimum and maximum value over 50 runs.}
-%%  \end{figure}
 
 \begin{itemize}
 \item description du problème
